--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,10 @@
     </head>
     <body>
         <div class="page-header">
-            <h1><a href="">Mageluer's Blog Powered by Django</a></h1>
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            {% endif %}
+            <h1><a href="{% url 'post_list' %}">Mageluer's Blog Powered by Django</a></h1>
         </div>
 
         <div class="content container">
